--- a/1929/大萧条时代特征.md
+++ b/1929/大萧条时代特征.md
@@ -81,22 +81,44 @@
 
 ## 失业
 
+![](https://finace.oss-cn-hangzhou.aliyuncs.com/img/20230624090034.png)
+
 ## 城乡人口流动
+
+城乡流动减慢，甚至出现城市的年轻人落住乡下的现象
 
 ## 人均负债
 
+由于泡沫的全民性，人均负债达到一定规模
+
 ## 通货紧缩
+
+基础行业产出大于需求，尤其是农业方面
 
 ## 货币低流动性
 
+由于泡沫的破裂，人们尽可能地保留现金或黄金，而不是参与消费
+
 ## 消费欲望降低
+
+同货币流动性，由于未来的不确定性增加和负债，人们减少消费
 
 ## 银行危机
 
+投机热泡沫的出现，银行面临着许多债务违约以及投资业务的亏损
+
 ## 人口出生率和家庭规模
+
+人口出生率锐减，家庭规模变小
 
 ## 保守主义抬头
 
+各国开始设置贸易壁垒，甚至相互攻击，尤其是美国的孤立主义日益严重
+
 ## 有闲（低消费）活动的兴起
 
+类似于高尔夫之类的高消费运动减少，而扑克和台球等娱乐展现头角
+
 ## 攻击性的舆论
+
+随着经济的衰退和刚开始一些政策的失利，人们开始攻击政府，尤其是现任总统
